# handicap

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md
.claude/: settings.json
.claude/agents/: handicap-reviewer.md  security-reviewer.md  spec-plan-reviewer.md
.claude/hooks/: claude-md-split-reminder.sh  controller-bin-guard.sh  format.sh  git-guard.sh  proto-ripple-reminder.sh  rebuild-worker-reminder.sh  spec-review-guard.sh  tdd-guard.sh  ui-gate-reminder.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  e2e-kind.yml  release.yml
crates/controller/: CLAUDE.md  Cargo.toml
crates/controller/src/: app.rs  binding.rs  bundle.rs  error.rs  export.rs  in_process.rs  insights.rs  launch.rs  lib.rs  main.rs  report.rs  settings.rs  validity.rs  worker_proc.rs
crates/controller/src/api/: datasets.rs  environments.rs  mod.rs  pool.rs  presets.rs  runs.rs  scenarios.rs  schedules.rs  settings.rs  step_templates.rs  test_runs.rs
crates/controller/src/datasets/: mod.rs  parse.rs
crates/controller/src/dispatcher/: k8s_spec.rs  kubernetes.rs  mod.rs  subprocess.rs
crates/controller/src/grpc/: coordinator.rs  mod.rs  shard.rs
crates/controller/src/schedule/: mod.rs  runner.rs  trigger.rs
crates/controller/src/store/: datasets.rs  environments.rs  metrics.rs  mod.rs  pool_overrides.rs  presets.rs  runs.rs  scenarios.rs  schedules.rs  settings.rs  step_templates.rs
crates/controller/src/store/migrations/: 0001_initial.sql  0002_run_message.sql  0003_run_loop_metrics.sql  0004_datasets.sql  0005_run_presets.sql  0006_run_if_metrics.sql  0007_environments.sql  0010_run_group_metrics.sql  0011_schedules.sql  0013_run_phase_metrics.sql  0015_step_templates.sql  0016_run_active_vu_metrics.sql  0018_run_active_vu_metrics_worker_id.sql  0019_pool_worker_overrides.sql
crates/controller/tests/: api_test.rs  coordinator_loop_stats_test.rs  crash_recovery_test.rs  data_binding_api_test.rs  datasets_api_test.rs  datasets_store_test.rs  dispatcher_kubernetes_test.rs  dispatcher_spec_test.rs  dispatcher_subprocess_test.rs  e2e_kind_driver_smoke_test.rs  e2e_test.rs  environments_api_test.rs  environments_wiring.rs  export_routes_test.rs  loop_proto_wiring.rs  multi_worker_fanout_e2e.rs  now_ms_wiring.rs  pool_api_test.rs  pool_capacity_guard_test.rs  pool_e2e.rs  pool_open_loop_capacity_test.rs  pool_vu_curve_capacity_test.rs  presets_api_test.rs  report_test.rs  run_dispatch_failure_test.rs  scenario_branch_validation_test.rs  scenario_delete_api_test.rs  scenario_genvars_gate_test.rs  scheduler_trigger_test.rs  schedules_api_test.rs  settings_api_test.rs  static_test.rs  step_templates_api_test.rs  test_runs_api_test.rs  validity_mod_keepalive.rs
crates/engine/: CLAUDE.md  Cargo.toml
crates/engine/src/: aggregator.rs  cast.rs  condition.rs  conn_timing.rs  dataset.rs  error.rs  executor.rs  extract.rs  genvars.rs  lib.rs  pacing.rs  percentiles.rs  runner.rs  scenario.rs  template.rs  trace.rs
crates/engine/tests/: aggregator_loop_wiring.rs  all_vus_failed.rs  assertions.rs  data_binding.rs  dead_code_cleanup_wiring.rs  executor_extract.rs  extract_evaluator.rs  genvars_wiring.rs  http_timeout.rs  if_node.rs  json_cast.rs  loop_index_test.rs  loop_node.rs  multi_dataset_binding.rs  multi_step.rs  notes_roundtrip.rs  open_loop.rs  pacing.rs  parallel_node.rs  parallel_trace.rs  percentiles_test.rs  phase_breakdown.rs  proptests.rs  ramp_up.rs  runner_e2e.rs  template_env_wiring.rs  think_time.rs  trace_rows.rs  trace_scenario.rs  unique_binding.rs  vu_curve.rs  vu_offset.rs
crates/engine/tests/fixtures/: single_step.yaml  two_step.yaml
crates/proto/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker-core/: CLAUDE.md  Cargo.toml
crates/worker-core/src/: client.rs  error.rs  lib.rs  reconnect.rs
crates/worker-core/tests/: lib_smoke.rs  reconnect_backoff_test.rs
crates/worker/src/: client.rs  lib.rs  main.rs
crates/worker/tests/: abort_and_env.rs  sigterm_test.rs
deploy/: CLAUDE.md  Dockerfile
deploy/kind/: cluster.yaml  wiremock.yaml
desktop/: .gitignore  CLAUDE.md  README.md
desktop/src/: splash.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: backend.rs  launch.rs  lib.rs  main.rs
docs/: build-log-mvp1.md  build-log.md  followups-after-mvp1.md  roadmap-archive.md  roadmap-status.md  roadmap.md
docs/adr/: 0001-target-user-internal-qa.md  0002-protocol-scope-rest-api-first.md  0003-ui-model-gui-code-bidirectional-sync.md  0004-engine-language-rust.md  0005-ui-stack-typescript-react.md  0006-deployment-target-upstream-k8s.md  0007-local-k8s-kind-not-k3s.md  0008-mvp-strategy-vertical-slice.md  0009-no-live-dashboard-mvp.md  0010-controller-worker-grpc-pull.md  0011-mvp-storage-sqlite.md  0012-worker-side-metric-aggregation.md  0013-scenario-runconfig-separation.md  0014-template-notation.md  0015-bidirectional-sync-impl.md  0016-vu-execution-model-task-per-vu.md  0017-mvp-report-scope.md  0018-vu-scoped-cookie-jar.md  0019-worker-dispatcher-abstraction.md  0020-control-flow-loop-node.md  0021-loop-metric-breakdown.md  0022-data-driven-datasets.md  0023-conditional-node.md  0024-run-presets-independent-resource.md  0025-environments-resource.md  0026-scenario-editor-test-run.md  0027-multi-worker-fanout.md  0028-run-level-slo-criteria.md  0029-json-body-type-cast-injection.md  0030-run-comparison-report-export.md  0031-open-loop-arrival-rate-execution-model.md  0032-multi-stage-open-loop-rate-curve.md  0033-parallel-node.md  0034-run-scheduler.md  0035-ui-korean-copy-message-catalog.md  0036-step-templates-copy-on-insert.md  0037-closed-loop-vu-curve.md  0038-multi-worker-open-loop.md  0039-windows-desktop-distribution.md  0040-tauri-desktop-wrapper.md  (+9 more)
docs/dev/: capacity-planning.md  claude-automation-recommendations.md  (+21 more)
scripts/: bench-throughput.sh  build-image.sh  deploy-kind.sh  e2e-kind.sh
testdata/: compare_golden.json
ui/: .gitignore  .prettierignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+732 files in other folders)
