[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
croner = "3"
chrono = "0.4"
chrono-tz = "0.10"
bytes = "1"
calamine = "0.26"
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
encoding_rs = "0.8"
rust_xlsxwriter = "0.79"   # report XLSX export (prod) + test fixtures
futures = "0.3"
hdrhistogram = { version = "7", features = ["serialization"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
kube = { version = "0.95", default-features = false, features = ["client", "rustls-tls", "runtime"] }
prost = "0.13"
prost-types = "0.13"
proptest = "1.5"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-util = { version = "0.7", default-features = false }
tonic = "0.12"
tonic-build = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = { version = "0.2", default-features = false }
ulid = { version = "1", features = ["serde"] }

[workspace.dependencies.wiremock]
version = "0.6"
