[package]
name = "handicap-controller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "handicap_controller"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
handicap-engine = { path = "../engine" }
handicap-proto = { path = "../proto" }
anyhow.workspace = true
hdrhistogram.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

[dev-dependencies]
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"] }
wiremock.workspace = true
serde_json.workspace = true
tempfile = "3"
