[package]
name = "handicap-controller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "handicap_controller"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "src/main.rs"

[dependencies]
handicap-engine = { path = "../engine" }
handicap-proto = { path = "../proto" }
anyhow.workspace = true
croner.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
hdrhistogram.workspace = true
async-trait.workspace = true
axum.workspace = true
calamine.workspace = true
clap.workspace = true
csv.workspace = true
encoding_rs.workspace = true
rust_xlsxwriter.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
# reqwest is used by the e2e_kind_driver bin (src/bin/e2e_kind_driver.rs).
# Cargo bins only see [dependencies], not [dev-dependencies], so this must
# live here even though no other production code in this crate uses it.
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "json"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true

# bundle(단일 self-contained 바이너리) 전용 — optional, 기본 빌드엔 불포함.
handicap-worker = { path = "../worker", optional = true }
rust-embed = { version = "8", optional = true }
dirs = { version = "5", optional = true }
open = { version = "5", optional = true }

[features]
slice6-k8s = []
# 단일 self-contained 바이너리 모드(ADR-0039 옵션 A). off=현행 byte-identical.
bundle = ["dep:handicap-worker", "dep:rust-embed", "rust-embed/mime-guess", "dep:dirs", "dep:open"]

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
# `test-util` enables `#[tokio::test(start_paused = true)]` — NOT in `full`.
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
