[package]
name = "handicap-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
rand = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-test.workspace = true
wiremock.workspace = true
