[package]
name = "handicap-worker-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "handicap_worker_core"
path = "src/lib.rs"

[dependencies]
handicap-engine = { path = "../engine" }
handicap-proto = { path = "../proto" }
futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
# `tokio-util` is back as a direct dep so the reconnect loop can take a
# `CancellationToken` and abort an in-flight backoff sleep when SIGTERM
# arrives during the initial connect. See `reconnect::retry_with_backoff`.
tokio-util = { workspace = true, features = ["rt"] }
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
# `test-util` enables `tokio::test(start_paused = true)` and friends — needed
# for the reconnect backoff test to advance virtual time without burning real
# wall-clock seconds. Not in the `full` meta-feature.
tokio = { workspace = true, features = ["test-util"] }
