[package]
name = "handicap-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
handicap-engine = { path = "../engine" }
handicap-proto = { path = "../proto" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
