[package]
name = "handicap-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
handicap-engine = { path = "../engine" }
handicap-proto = { path = "../proto" }
handicap-worker-core = { path = "../worker-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid = { workspace = true }
gethostname = { workspace = true }
