[package]
name = "desktop"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Empty table → make this crate its OWN workspace root, so it is NOT a member of
# the repo-root workspace (`crates/*` glob). Required because cargo refuses to
# build a package nested inside a workspace tree unless it is a member/excluded
# or declares its own [workspace]. Keeps R5 (desktop outside root workspace) and
# R4 (root Cargo.toml untouched) both intact.
[workspace]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
handicap-controller = { path = "../../crates/controller", features = ["bundle"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
